--- a/lang/en.json
+++ b/lang/en.json
@@ -1,40 +1,74 @@
 {
-    "Dashboard": "Dashboard",
-    "User Management": "User Management",
-    "Repository": "Repository",
-    "Documentation": "Documentation",
-    "Settings": "Settings",
-    "Log Out": "Log Out",
-    "Search": "Search",
-    "Create User": "Create User",
-    "Edit User": "Edit User",
-    "Name": "Name",
-    "Email": "Email",
-    "Created": "Created",
     "Actions": "Actions",
-    "Edit": "Edit",
-    "Delete": "Delete",
+    "Add a new user to the system": "Add a new user to the system",
+    "Admin1 Code": "Admin1 Code",
+    "Admin1 Divisions": "Admin1 Divisions",
+    "Admin1 divisions updated from Geonames.": "Admin1 divisions updated from Geonames.",
+    "All Countries": "All Countries",
+    "Alt Name": "Alt Name",
+    "Are you sure you want to delete this user?": "Are you sure you want to delete this user?",
     "Back": "Back",
     "Cancel": "Cancel",
+    "Capital": "Capital",
+    "Change Password (Optional)": "Change Password (Optional)",
+    "Code": "Code",
+    "Confirm New Password": "Confirm New Password",
+    "Confirm Password": "Confirm Password",
+    "Confirm new password": "Confirm new password",
+    "Confirm password": "Confirm password",
+    "Countries": "Countries",
+    "Countries updated from Geonames.": "Countries updated from Geonames.",
+    "Country": "Country",
+    "Create User": "Create User",
+    "Created": "Created",
+    "Currency": "Currency",
+    "Dashboard": "Dashboard",
+    "Delete": "Delete",
+    "Documentation": "Documentation",
+    "Edit": "Edit",
+    "Edit User": "Edit User",
+    "Email": "Email",
+    "Enter email address": "Enter email address",
+    "Enter password": "Enter password",
+    "Enter user name": "Enter user name",
+    "Geonames Postcodes": "Geonames Postcodes",
+    "ISO": "ISO",
+    "Import": "Import",
+    "Importing...": "Importing...",
+    "Latitude": "Latitude",
+    "Leave blank to keep current password": "Leave blank to keep current password",
+    "Log Out": "Log Out",
+    "Longitude": "Longitude",
+    "Name": "Name",
+    "New Password": "New Password",
+    "No admin1 data to update. Run seeder first.": "No admin1 data to update. Run seeder first.",
+    "No admin1 divisions found.": "No admin1 divisions found.",
+    "No countries found.": "No countries found.",
+    "No postcodes found.": "No postcodes found.",
+    "No users found.": "No users found.",
+    "Password": "Password",
+    "Phone": "Phone",
+    "Place Name": "Place Name",
+    "Population": "Population",
+    "Postcode": "Postcode",
+    "Postcode import is not yet implemented.": "Postcode import is not yet implemented.",
+    "Postcode update is not yet implemented.": "Postcode update is not yet implemented.",
+    "Repository": "Repository",
+    "Search": "Search",
+    "Search by country name or ISO code...": "Search by country name or ISO code...",
+    "Search by name, code, or country...": "Search by name, code, or country...",
+    "Search by postcode, place name, or country...": "Search by postcode, place name, or country...",
+    "Settings": "Settings",
+    "States, provinces, and top-level administrative divisions": "States, provinces, and top-level administrative divisions",
+    "Update": "Update",
     "Update User": "Update User",
     "Update user information": "Update user information",
-    "Enter user name": "Enter user name",
-    "Enter email address": "Enter email address",
-    "Change Password (Optional)": "Change Password (Optional)",
-    "New Password": "New Password",
-    "Leave blank to keep current password": "Leave blank to keep current password",
-    "Confirm New Password": "Confirm New Password",
-    "Confirm new password": "Confirm new password",
-    "Add a new user to the system": "Add a new user to the system",
-    "Password": "Password",
-    "Enter password": "Enter password",
-    "Confirm Password": "Confirm Password",
-    "Confirm password": "Confirm password",
-    "You cannot delete your own account.": "You cannot delete your own account.",
+    "Updated": "Updated",
+    "Updating...": "Updating...",
+    "User Management": "User Management",
+    "User created successfully.": "User created successfully.",
     "User deleted successfully.": "User deleted successfully.",
     "User updated successfully.": "User updated successfully.",
-    "User created successfully.": "User created successfully.",
-    "Are you sure you want to delete this user?": "Are you sure you want to delete this user?",
     "You cannot delete your own account": "You cannot delete your own account",
-    "No users found.": "No users found."
+    "You cannot delete your own account.": "You cannot delete your own account."
 }
