Enhance UI components and language files for improved user experience
- Updated `en.json` with additional language strings for country import success and user actions.
- Refined CSS styles in `app.css` to introduce new status colors for success, danger, warning, and info alerts.
- Improved layout consistency in Blade components by adjusting padding, margins, and border styles.
- Replaced hardcoded HTML elements with Blade components for better maintainability and reusability.
- Enhanced user feedback mechanisms with updated alert and button components across various views.

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,10 +1,13 @@
 {
+    ":count country(s) imported successfully.": ":count country(s) imported successfully.",
+    ":count country(s) updated successfully.": ":count country(s) updated successfully.",
     "Actions": "Actions",
     "Add a new user to the system": "Add a new user to the system",
     "Admin1 Code": "Admin1 Code",
     "Admin1 Divisions": "Admin1 Divisions",
     "Admin1 divisions updated from Geonames.": "Admin1 divisions updated from Geonames.",
     "All Countries": "All Countries",
+    "Already imported countries are marked. Use the Update button to refresh their data.": "Already imported countries are marked. Use the Update button to refresh their data.",
     "Alt Name": "Alt Name",
     "Are you sure you want to delete this user?": "Are you sure you want to delete this user?",
     "Back": "Back",
@@ -24,6 +27,7 @@
     "Currency": "Currency",
     "Dashboard": "Dashboard",
     "Delete": "Delete",
+    "Dispatching...": "Dispatching...",
     "Documentation": "Documentation",
     "Edit": "Edit",
     "Edit User": "Edit User",
@@ -49,6 +53,7 @@
     "Password": "Password",
     "Phone": "Phone",
     "Place Name": "Place Name",
+    "Please select at least one country to import.": "Please select at least one country to import.",
     "Population": "Population",
     "Postcode": "Postcode",
     "Postcode import is not yet implemented.": "Postcode import is not yet implemented.",
@@ -58,6 +63,7 @@
     "Search by country name or ISO code...": "Search by country name or ISO code...",
     "Search by name, code, or country...": "Search by name, code, or country...",
     "Search by postcode, place name, or country...": "Search by postcode, place name, or country...",
+    "Select countries to import": "Select countries to import",
     "Settings": "Settings",
     "States, provinces, and top-level administrative divisions": "States, provinces, and top-level administrative divisions",
     "Update": "Update",
