fix: Adjust logout icon viewBox for optical centering in sidebar

--- a/lang/en.json
+++ b/lang/en.json
@@ -59,6 +59,7 @@
     "Postcode import is not yet implemented.": "Postcode import is not yet implemented.",
     "Postcode update is not yet implemented.": "Postcode update is not yet implemented.",
     "Repository": "Repository",
+    "Roles": "Roles",
     "Search": "Search",
     "Search by country name or ISO code...": "Search by country name or ISO code...",
     "Search by name, code, or country...": "Search by name, code, or country...",
@@ -66,11 +67,13 @@
     "Select countries to import": "Select countries to import",
     "Settings": "Settings",
     "States, provinces, and top-level administrative divisions": "States, provinces, and top-level administrative divisions",
+    "Toggle sidebar": "Toggle sidebar",
     "Update": "Update",
     "Update User": "Update User",
     "Update user information": "Update user information",
     "Updated": "Updated",
     "Updating...": "Updating...",
+    "Users": "Users",
     "User Management": "User Management",
     "User created successfully.": "User created successfully.",
     "User deleted successfully.": "User deleted successfully.",
