feat: Add country record counts to postcodes view
- Introduced a new feature to display the number of postcodes grouped by country in the admin interface.
- Added localization strings for "Postcodes by country" and "Records" to enhance user experience.
- Implemented a database query to fetch and count postcodes by country, improving data visibility.

--- a/lang/en.json
+++ b/lang/en.json
@@ -60,7 +60,9 @@
     "Postcode": "Postcode",
     "Postcode import is not yet implemented.": "Postcode import is not yet implemented.",
     "Postcode update is not yet implemented.": "Postcode update is not yet implemented.",
+    "Postcodes by country": "Postcodes by country",
     "Repository": "Repository",
+    "Records": "Records",
     "Roles": "Roles",
     "Search": "Search",
     "Search by country name or ISO code...": "Search by country name or ISO code...",
