Enhance address management with auto-detection for admin1 and locality fields
- Introduced boolean flags to track automatic population of admin1 and locality fields based on postcode input.
- Updated relevant methods to reset these fields when the country or postcode changes, ensuring data integrity.
- Enhanced the UI components to display hints indicating when values are auto-filled from postcode, improving user experience.

These changes streamline the address entry process by providing clearer feedback and maintaining accurate data across forms.

--- a/lang/en.json
+++ b/lang/en.json
@@ -2,7 +2,7 @@
     ":count country(s) imported successfully.": ":count country(s) imported successfully.",
     ":count country(s) updated successfully.": ":count country(s) updated successfully.",
     "Actions": "Actions",
-    "Add a new user to the system": "Add a new user to the system",
+    "(from postcode)":"(from postcode)","Add a new user to the system": "Add a new user to the system",
     "Admin1 Code": "Admin1 Code",
     "Admin1 Divisions": "Admin1 Divisions",
     "Admin1 divisions updated from Geonames.": "Admin1 divisions updated from Geonames.",
